--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-	"name": "pierce",
-	"version": "1.0.0",
-	"description": "Machine learning, signal processing, and statistics",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "Pierce Stegman <pwstegman@gmail.com> (https://github.com/pwstegman)",
-	"license": "MIT",
-	"dependencies": {
-		"pw-csp": "^1.0.0",
-		"pw-lda": "^1.0.0",
-		"pw-stat": "^1.0.0"
-	}
+  "name": "pierce",
+  "version": "1.0.2",
+  "description": "Machine learning, signal processing, and statistics",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Pierce Stegman <pwstegman@gmail.com> (https://github.com/pwstegman)",
+  "license": "MIT",
+  "dependencies": {
+    "pw-csp": "^1.0.0",
+    "pw-lda": "^1.0.0",
+    "pw-stat": "^1.0.0"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pwstegman/pierce.git"
+  },
+  "keywords": [
+    "statistics",
+    "machine learning",
+    "signal processing"
+  ],
+  "bugs": {
+    "url": "https://github.com/pwstegman/pierce/issues"
+  },
+  "homepage": "https://github.com/pwstegman/pierce#readme"
 }
